# e1-esm-benchmark

./: .gitignore  README.md  pyproject.toml
configs/: e1_600m.yaml  esm2_650m.yaml
notebooks/: run_benchmark.ipynb
scripts/: download_data.py  run_benchmark.py  run_proteingym.py
src/e1_esm_benchmark/: __init__.py  benchmark.py  benchmark_proteingym.py  data.py  data_proteingym.py  embed_e1.py  embed_esm.py  heads.py
